     (due to the [filter_recall] not matching)
   * Weapon specials only gained through AMLAs now get a help topic
   * The "Cores" button on the title screen is now hidden if no cores other
     than the default are installed
   * Redesigned game dropdown/context menu appearance
   * New categories bar in hotkey preferences allows you to filter hotkeys
 * WML Engine:
   * Added {HAS_NO_TURN_LIMIT} macro for objectives
   * New attributes for [message] with [option]
     * Added variable= to [message]: if specified, gives variable name to
       receive the [option] index (1..n) selected
       only used if any [option] appear
     * Added value= to [option]: if specified, gives value to store in variable
       instead of index number, only used if variable= appears in [message]
   * New attributes for [role]:
     * search_recall_list=yes|no|only(default yes) controls where to look
     * reassign=yes|no(default yes) if no, check for a unit and do not assign to
       another
     * [auto_recall] sub-tag, if assigned to recall list, gives [recall]
       attributes (no SUF)
     * [else] sub-tag, WML to execute if no unit found for the role
   * New help_text= key for [trait] to set the description displayed in the
     help.
   * Added tag id= [fire_event], which allows raising events by id
   * [modify_unit] now understands [effect] tags, which it applies directly.
     This replaces the use of [object] with no_write=yes (which will be removed
     in the next release).
   * Add [object]take_only_once=yes|no (default yes) - if set to no, automatic
     tracking is disabled for this object (allowing it to be taken multiple
     times even if it has an id).
   * New [remove_object] tag which removes applied [object]s from matched units;
     it can filter on the entire [object] WML. The most efficient use is to
     remove all objects with a specific duration value.
   * Renamed [foreach] variable= to array=
   * Renamed [foreach] item_var= to variable=