@@ -38,6 +38,7 @@ Version 1.13.5+dev:
      than the default are installed
    * Redesigned game dropdown/context menu appearance
    * New categories bar in hotkey preferences allows you to filter hotkeys
+   * Screen resolution while in fullscreen possible again (bug #24583)
  * WML Engine:
    * Added {HAS_NO_TURN_LIMIT} macro for objectives
    * New attributes for [message] with [option]
